fixup! Improve contrast

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@
 body {
   font-family: 'Noto Sans', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 18px;
-  color: #202020;
+  color: #000000;
   position: relative;
   background: #FFF;
   display: flex;
